# Flux-Game-engine

./: .gitignore  CMakeLists.txt  README.md  WinBuild.bat
src/: Main.cpp
windows/: build.bat  clean.bat
